fix wrong window

--- a/upload.html
+++ b/upload.html
@@ -46,19 +46,11 @@
     <div class="text-center col-md-6">
 	  <h4>出版品</h4>
 	  <div class="">
-		  	<label class="checkarea">One
+		  	<label class="checkarea">電子書
 			  <input type="checkbox" checked="checked">
 			  <span class="checkmark"></span>
 			</label>
-			<label class="checkarea">Two
-			  <input type="checkbox">
-			  <span class="checkmark"></span>
-			</label>
-			<label class="checkarea">Three
-			  <input type="checkbox">
-			  <span class="checkmark"></span>
-			</label>
-			<label class="checkarea">Four
+			<label class="checkarea">期刊
 			  <input type="checkbox">
 			  <span class="checkmark"></span>
 			</label>
