--- a/login.html
+++ b/login.html
@@ -11,18 +11,27 @@
 
 </head>
 <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid"> 
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="upload.html">Upload</a>
-	  <a class="navbar-brand" href="inventory.html">Inventory</a>
-	  <a class="navbar-brand" href="unit.html">Unit</a>
-	  <a class="navbar-brand" href="login.html">Login</a>
-	</div>
-    <!-- /.navbar-collapse --> 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="upload.html">Upload</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="inventory.html">Inventory</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="unit.html">Unit</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="login.html">Login</a>
+      </li>
+    </ul>
   </div>
-  <!-- /.container-fluid --> 
 </nav>
 <div class="container-fluid">
   <div class="row">
@@ -50,7 +59,7 @@
   </div>
   <hr>
   <div class="row">
-    <div class="text-center col-md-6 col-md-offset-3">
+    <div class="text-center col-md-12 col-md-offset-3">
       <p>Copyright &copy; 2018 &middot; IDELab </p>
     </div>
   </div>
