--- a/inventory.html
+++ b/inventory.html
@@ -11,18 +11,27 @@
 
 </head>
 <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid"> 
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="upload.html">Upload</a>
-	  <a class="navbar-brand" href="inventory.html">Inventory</a>
-	  <a class="navbar-brand" href="unit.html">Unit</a>
-	  <a class="navbar-brand" href="login.html">Login</a>
-	</div>
-    <!-- /.navbar-collapse --> 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="upload.html">Upload</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="inventory.html">Inventory</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="unit.html">Unit</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="login.html">Login</a>
+      </li>
+    </ul>
   </div>
-  <!-- /.container-fluid --> 
 </nav>
 <div class="container-fluid">
   <div class="row">
@@ -39,29 +48,45 @@
 		  <thead class="thead-dark">
 			<tr>
 			  <th scope="col">#</th>
-			  <th scope="col">First</th>
-			  <th scope="col">Last</th>
-			  <th scope="col">Handle</th>
+			  <th scope="col">單位名稱</th>
+			  <th scope="col">設立年代</th>
+			  <th scope="col">電話</th>
+			  <th scope="col">地址</th>
+			  <th scope="col">網址</th>
+			  <th scope="col">上傳檔案</th>
+			  <th scope="col">主題</th>
 			</tr>
 		  </thead>
 		  <tbody>
 			<tr>
 			  <th scope="row">1</th>
-			  <td>Mark</td>
-			  <td>Otto</td>
-			  <td>@mdo</td>
+			  <td>地方署</td>
+			  <td>1985</td>
+			  <td>069-1234567</td>
+			  <td>澎湖縣馬公市XX路XXX號</td>
+			  <td><a href="http://googole.com">link</a></td>
+			  <td>影片</td>
+			  <td>食,衣</td>
 			</tr>
 			<tr>
 			  <th scope="row">2</th>
-			  <td>Jacob</td>
-			  <td>Thornton</td>
-			  <td>@fat</td>
+			  <td>地方署</td>
+			  <td>1985</td>
+			  <td>069-1234567</td>
+			  <td>澎湖縣馬公市XX路XXX號</td>
+			  <td><a href="http://googole.com">link</a></td>
+			  <td>影片</td>
+			  <td>食,衣</td>
 			</tr>
 			<tr>
 			  <th scope="row">3</th>
-			  <td>Larry</td>
-			  <td>the Bird</td>
-			  <td>@twitter</td>
+			  <td>地方署</td>
+			  <td>1985</td>
+			  <td>069-1234567</td>
+			  <td>澎湖縣馬公市XX路XXX號</td>
+			  <td><a href="http://googole.com">link</a></td>
+			  <td>影片</td>
+			  <td>食,衣</td>
 			</tr>
 		  </tbody>
 		</table>
@@ -69,7 +94,7 @@
   </div>
   <hr>
   <div class="row">
-    <div class="text-center col-md-6 col-md-offset-3">
+    <div class="text-center col-md-12 col-md-offset-3">
       <p>Copyright &copy; 2018 &middot; IDELab </p>
     </div>
   </div>
