--- a/inventory.html
+++ b/inventory.html
@@ -93,7 +93,7 @@
     </div>
   </div>
   <hr>
-  <div class="row">
+  <div class="row footerArea">
     <div class="text-center col-md-12 col-md-offset-3">
       <p>Copyright &copy; 2018 &middot; IDELab </p>
     </div>
