edit page title

--- a/unit.html
+++ b/unit.html
@@ -42,6 +42,7 @@
   <hr>
 </div>
 <div class="container">
+  <h3>單位列表</h3>
   <div class="row">
     <div class="text-center col-md-12">
         <table class="table">
@@ -53,8 +54,6 @@
 			  <th scope="col">電話</th>
 			  <th scope="col">地址</th>
 			  <th scope="col">網址</th>
-			  <th scope="col">上傳檔案</th>
-			  <th scope="col">主題</th>
 			</tr>
 		  </thead>
 		  <tbody>
@@ -65,8 +64,6 @@
 			  <td>069-1234567</td>
 			  <td>澎湖縣馬公市XX路XXX號</td>
 			  <td><a href="http://googole.com">link</a></td>
-			  <td>影片</td>
-			  <td>食,衣</td>
 			</tr>
 			<tr>
 			  <th scope="row">2</th>
@@ -75,8 +72,6 @@
 			  <td>069-1234567</td>
 			  <td>澎湖縣馬公市XX路XXX號</td>
 			  <td><a href="http://googole.com">link</a></td>
-			  <td>影片</td>
-			  <td>食,衣</td>
 			</tr>
 			<tr>
 			  <th scope="row">3</th>
@@ -85,8 +80,6 @@
 			  <td>069-1234567</td>
 			  <td>澎湖縣馬公市XX路XXX號</td>
 			  <td><a href="http://googole.com">link</a></td>
-			  <td>影片</td>
-			  <td>食,衣</td>
 			</tr>
 		  </tbody>
 		</table>
