--- a/inventory.html
+++ b/inventory.html
@@ -42,6 +42,7 @@
   <hr>
 </div>
 <div class="container">
+  <h3>上傳檔案列表</h3>
   <div class="row">
     <div class="text-center col-md-12">
         <table class="table">
