--- a/login.html
+++ b/login.html
@@ -19,16 +19,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="upload.html">Upload</a>
+        <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="inventory.html">Inventory</a>
+        <a class="nav-link" href="inventory.html">檔案列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="unit.html">Unit</a>
+        <a class="nav-link" href="unit.html">單位列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Login</a>
+        <a class="nav-link" href="login.html">登入</a>
       </li>
     </ul>
   </div>
@@ -43,17 +43,17 @@
 </div>
 <div class="container">
   <div>
-	  <h3>Login</h3>
+	  <h3>登入</h3>
 	 <form>
 	  <div class="form-group">
 		<label for="exampleInputEmail1">Email address</label>
-		<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+		<input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="帳號">
 	  </div>
 	  <div class="form-group">
 		<label for="exampleInputPassword1">Password</label>
-		<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+		<input type="password" class="form-control" id="exampleInputPassword1" placeholder="密碼">
 	  </div>
-	  <input type="button" class="btn btn-primary" value="Submit">
+	  <input type="button" class="btn btn-primary" value="送出">
 	</form>
 
   </div>
