--- a/unit.html
+++ b/unit.html
@@ -19,16 +19,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="upload.html">Upload</a>
+        <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="inventory.html">Inventory</a>
+        <a class="nav-link" href="inventory.html">檔案列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="unit.html">Unit</a>
+        <a class="nav-link" href="unit.html">單位列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Login</a>
+        <a class="nav-link" href="login.html">登入</a>
       </li>
     </ul>
   </div>
@@ -50,7 +50,7 @@
 			<tr>
 			  <th scope="col">#</th>
 			  <th scope="col">單位名稱</th>
-			  <th scope="col">設立年代</th>
+			  <th scope="col">設立時間</th>
 			  <th scope="col">電話</th>
 			  <th scope="col">地址</th>
 			  <th scope="col">網址</th>
@@ -59,27 +59,27 @@
 		  <tbody>
 			<tr>
 			  <th scope="row">1</th>
-			  <td>地方署</td>
+			  <td>機關A</td>
 			  <td>1985</td>
-			  <td>069-1234567</td>
+			  <td>06-1234456</td>
 			  <td>澎湖縣馬公市XX路XXX號</td>
-			  <td><a href="http://googole.com">link</a></td>
+			  <td><a href="http://googole.com">www.xxxx.gov.tw</a></td>
 			</tr>
 			<tr>
 			  <th scope="row">2</th>
-			  <td>地方署</td>
+			  <td>機關B</td>
 			  <td>1985</td>
-			  <td>069-1234567</td>
+			  <td>069-853364</td>
 			  <td>澎湖縣馬公市XX路XXX號</td>
-			  <td><a href="http://googole.com">link</a></td>
+			  <td><a href="http://googole.com">www.xxxx.gov.tw</a></td>
 			</tr>
 			<tr>
 			  <th scope="row">3</th>
-			  <td>地方署</td>
+			  <td>機關C</td>
 			  <td>1985</td>
-			  <td>069-1234567</td>
+			  <td>069-9463378</td>
 			  <td>澎湖縣馬公市XX路XXX號</td>
-			  <td><a href="http://googole.com">link</a></td>
+			  <td><a href="http://googole.com">www.xxxx.gov.tw</a></td>
 			</tr>
 		  </tbody>
 		</table>
