--- a/inventory.html
+++ b/inventory.html
@@ -19,16 +19,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="upload.html">Upload</a>
+        <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="inventory.html">Inventory</a>
+        <a class="nav-link" href="inventory.html">檔案列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="unit.html">Unit</a>
+        <a class="nav-link" href="unit.html">單位列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Login</a>
+        <a class="nav-link" href="login.html">登入</a>
       </li>
     </ul>
   </div>
