--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Web for Publisher</h1>
+      <h1 class="text-center">盤點網</h1>
     </div>
   </div>
   <hr>
@@ -46,11 +46,11 @@
 	  <h3>登入</h3>
 	 <form>
 	  <div class="form-group">
-		<label for="exampleInputEmail1">Email address</label>
+		<label for="exampleInputEmail1">帳號</label>
 		<input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="帳號">
 	  </div>
 	  <div class="form-group">
-		<label for="exampleInputPassword1">Password</label>
+		<label for="exampleInputPassword1">密碼</label>
 		<input type="password" class="form-control" id="exampleInputPassword1" placeholder="密碼">
 	  </div>
 	  <input type="button" class="btn btn-primary" value="送出">
