--- a/upload.html
+++ b/upload.html
@@ -36,18 +36,18 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Web for Publisher</h1>
+      <h1 class="text-center">盤點網</h1>
     </div>
   </div>
   <hr>
 </div>
 <div class="container">
   <div class="row">
-    <h3>Upload file</h3>
+    <h3>上傳檔案</h3>
 	  <div class="input-group mb-3">
 	    <div class="custom-file">
-		  <input type="file" class="custom-file-input" id="inputGroupFile01">
-		  <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+		  <input type="file" class="custom-file-input" id="inputGroupFile01" value="瀏覽檔案">
+		  <label class="custom-file-label" for="inputGroupFile01">選擇檔案</label>
 	    </div>
 	  </div> 
   </div>
