--- a/inventory.html
+++ b/inventory.html
@@ -50,7 +50,7 @@
 			<tr>
 			  <th scope="col">#</th>
 			  <th scope="col">單位名稱</th>
-			  <th scope="col">設立年代</th>
+			  <th scope="col">設立時間</th>
 			  <th scope="col">電話</th>
 			  <th scope="col">地址</th>
 			  <th scope="col">網址</th>
@@ -61,31 +61,31 @@
 		  <tbody>
 			<tr>
 			  <th scope="row">1</th>
-			  <td>地方署</td>
+			  <td>機關A</td>
 			  <td>1985</td>
 			  <td>069-1234567</td>
 			  <td>澎湖縣馬公市XX路XXX號</td>
-			  <td><a href="http://googole.com">link</a></td>
+			  <td><a href="http://googole.com">www.xxxx.gov.tw</a></td>
 			  <td>影片</td>
 			  <td>食,衣</td>
 			</tr>
 			<tr>
 			  <th scope="row">2</th>
-			  <td>地方署</td>
+			  <td>機關A</td>
 			  <td>1985</td>
 			  <td>069-1234567</td>
 			  <td>澎湖縣馬公市XX路XXX號</td>
-			  <td><a href="http://googole.com">link</a></td>
+			  <td><a href="http://googole.com">www.xxxx.gov.tw</a></td>
 			  <td>影片</td>
 			  <td>食,衣</td>
 			</tr>
 			<tr>
 			  <th scope="row">3</th>
-			  <td>地方署</td>
+			  <td>機關A</td>
 			  <td>1985</td>
 			  <td>069-1234567</td>
 			  <td>澎湖縣馬公市XX路XXX號</td>
-			  <td><a href="http://googole.com">link</a></td>
+			  <td><a href="http://googole.com">www.xxxx.gov.tw</a></td>
 			  <td>影片</td>
 			  <td>食,衣</td>
 			</tr>
