--- a/inventory.html
+++ b/inventory.html
@@ -18,10 +18,10 @@
   </button>  
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="inventory.html">檔案列表</a>
       </li>
       <li class="nav-item">
@@ -36,7 +36,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Web for Publisher</h1>
+      <h1 class="text-center">盤點網</h1>
     </div>
   </div>
   <hr>
