--- a/upload.html
+++ b/upload.html
@@ -53,13 +53,13 @@
   </div>
   <div class="row">
     <div class="text-center col-md-6">
-	  <h4>出版品</h4>
+	  <h4>出版型態</h4>
 	  <div class="">
-		  	<label class="checkarea">電子書
+		  	<label class="checkarea">電子檔
 			  <input type="checkbox" checked="checked">
 			  <span class="checkmark"></span>
 			</label>
-			<label class="checkarea">期刊
+			<label class="checkarea">紙本
 			  <input type="checkbox">
 			  <span class="checkmark"></span>
 			</label>
