--- a/unit.html
+++ b/unit.html
@@ -50,7 +50,7 @@
 			<tr>
 			  <th scope="col">#</th>
 			  <th scope="col">單位名稱</th>
-			  <th scope="col">設立時間</th>
+			  <th scope="col">設立年代</th>
 			  <th scope="col">電話</th>
 			  <th scope="col">地址</th>
 			  <th scope="col">網址</th>
