--- a/upload.html
+++ b/upload.html
@@ -41,7 +41,7 @@
   </div>
   <hr>
 </div>
-<div class="container">
+<div class="container col-md-6">
   <div class="row">
     <h3>Upload file</h3>
 	  <div class="input-group mb-3">
@@ -54,7 +54,7 @@
   <div class="row">
     <div class="text-center col-md-12">
 	  <h4>出版品</h4>
-	  <div class="col-md-12">
+	  <div class="row col-md-12">
 		  <h5>檔案基本資料</h5>
 		  <div class="text-center form-group">
 		  	<label>檔案名稱
@@ -67,15 +67,20 @@
 			  <input type="date" class="form-control">
 			</label>
 		  </div>
-		  <div>
-		  
+	  </div>
+	  <div class="row col-md-12">
+		  <div class="text-center form-control">
 		  <h5>是否授權</h5>
 		    <label class="checkarea">是
-			  <input type="radio" checked="checked" name="radio">
-			  <span class="checkradio"></span>
+			<input type="radio" checked="checked" name="radio">
+			<span class="checkradio"></span>
 			</label>
-		      <p>費用</p>
-			  <input type="text" placeholder="free" class="form-control col-md-12">
+			  <div class="form-group row">
+				<label class="col-sm-3 col-form-label">費用</label>
+				<div class="col-sm-8">
+				  <input type="text" class="form-control" id="#" placeholder="free">
+				</div>
+			  </div>
 			<label class="checkarea">否
 			  <input type="radio" name="radio">
 			  <span class="checkradio"></span>
