--- a/upload.html
+++ b/upload.html
@@ -67,27 +67,29 @@
 			</label>
 			<div>
 				<label class="checkarea">其他
-				  <input type="radio" name="RadioForFile">
+				  <input type="radio" name="RadioForFile" id="other">
 				  <span class="checkradio"></span>
 				</label>
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">原文位址</label>
 					<div class="col-sm-8">
-					  <input type="text" class="form-control" id="" placeholder="http://">
+					  <input type="text" class="form-control" id="otherURL" placeholder="http://" disabled>
 					</div>
 					<label class="col-sm-4 col-form-label">檔名</label>
 					<div class="col-sm-8">
-					  <input type="text" class="form-control" id="" placeholder="檔案名稱">
+					  <input type="text" class="form-control" id="otherFileName" placeholder="檔案名稱" disabled>
 					</div>
 			  	</div>
 			</div>
 		  </div>
 	  </div>
-	  <div class="row col-md-12 text-center">
-		  <h5>檔案基本資料</h5>
-		  
-		  <div class="form-group row">
-			<label class="col-sm-4 col-form-label">檔案名稱</label>
+	</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 text-center">
+      <h5>檔案基本資料</h5>
+      <div class="form-group row">
+		<label class="col-sm-4 col-form-label">檔案名稱</label>
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="" placeholder="">
 			</div>
@@ -99,9 +101,11 @@
 			<div class="col-sm-8">
 				<input type="date" class="form-control" id="" placeholder="檔案名稱">
 			</div>
-		  </div>
-		 
 	  </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="text-center col-md-12">
 	  <div class="row col-md-12">
 		  <div class="text-center form-control">
 		  <h5>是否授權</h5>
