modify inventory.html data

--- a/inventory.html
+++ b/inventory.html
@@ -50,44 +50,56 @@
 			<tr>
 			  <th scope="col">#</th>
 			  <th scope="col">單位名稱</th>
-			  <th scope="col">設立年代</th>
-			  <th scope="col">電話</th>
-			  <th scope="col">地址</th>
-			  <th scope="col">網址</th>
+			  <th scope="col">檔案格式</th>
 			  <th scope="col">上傳檔案</th>
-			  <th scope="col">主題</th>
+			  <th scope="col">檔案名稱</th>
+			  <th scope="col">作者</th>
+			  <th scope="col">出版日期</th>
+			  <th scope="col">授權</th>
+			  <th scope="col">費用</th>
+			  <th scope="col">類型</th>
+			  <th scope="col">標籤</th>
 			</tr>
 		  </thead>
 		  <tbody>
 			<tr>
 			  <th scope="row">1</th>
 			  <td>地方署</td>
-			  <td>1985</td>
-			  <td>069-1234567</td>
-			  <td>澎湖縣馬公市XX路XXX號</td>
-			  <td><a href="http://googole.com">link</a></td>
-			  <td>影片</td>
-			  <td>食,衣</td>
+			  <td>PDF</td>
+			  <td>File path</td>
+			  <td>introduce.pdf</td>
+			  <td>王大明</td>
+			  <td>2018/01/05</td>
+			  <td>是</td>
+			  <td>0</td>
+			  <td>食,住</td>
+			  <td>好玩,好吃,房間很舒適</td>
 			</tr>
 			<tr>
 			  <th scope="row">2</th>
 			  <td>地方署</td>
-			  <td>1985</td>
-			  <td>069-1234567</td>
-			  <td>澎湖縣馬公市XX路XXX號</td>
-			  <td><a href="http://googole.com">link</a></td>
-			  <td>影片</td>
-			  <td>食,衣</td>
+			  <td>PDF</td>
+			  <td>File path</td>
+			  <td>introduce.pdf</td>
+			  <td>王大明</td>
+			  <td>2018/01/05</td>
+			  <td>是</td>
+			  <td>0</td>
+			  <td>食,住</td>
+			  <td>好玩,好吃,房間很舒適</td>
 			</tr>
 			<tr>
 			  <th scope="row">3</th>
 			  <td>地方署</td>
-			  <td>1985</td>
-			  <td>069-1234567</td>
-			  <td>澎湖縣馬公市XX路XXX號</td>
-			  <td><a href="http://googole.com">link</a></td>
-			  <td>影片</td>
-			  <td>食,衣</td>
+			  <td>PDF</td>
+			  <td>File path</td>
+			  <td>introduce.pdf</td>
+			  <td>王大明</td>
+			  <td>2018/01/05</td>
+			  <td>是</td>
+			  <td>0</td>
+			  <td>食,住</td>
+			  <td>好玩,好吃,房間很舒適</td>
 			</tr>
 		  </tbody>
 		</table>
