modified upload page

--- a/upload.html
+++ b/upload.html
@@ -58,11 +58,11 @@
 		  <div class="text-center form-control">
 		  <h5>檔案格式</h5>
 		    <label class="checkarea">全文電子檔
-			<input type="radio" checked="checked" name="RadioForFile">
+			<input type="radio" checked="checked" name="RadioForFile" id="content">
 			<span class="checkradio"></span>
 			</label>
 			<label class="checkarea">附錄電子檔
-			  <input type="radio" name="RadioForFile">
+			  <input type="radio" name="RadioForFile" id="appendix">
 			  <span class="checkradio"></span>
 			</label>
 			<div>
