--- a/upload.html
+++ b/upload.html
@@ -114,7 +114,7 @@
 			<span class="checkradio"></span>
 			</label>
 			  <div class="form-group row">
-				<label class="col-sm-3 col-form-label">費用</label>
+				<label class="col-sm-3 col-form-label">費用(新台幣)</label>
 				<div class="col-sm-8">
 				  	<div class="input-group number-spinner">
 						<span class="input-group-btn">
