--- a/upload.html
+++ b/upload.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,16 +19,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="upload.html">Upload</a>
+        <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="inventory.html">Inventory</a>
+        <a class="nav-link" href="inventory.html">檔案列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="unit.html">Unit</a>
+        <a class="nav-link" href="unit.html">單位列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Login</a>
+        <a class="nav-link" href="login.html">登入</a>
       </li>
     </ul>
   </div>
@@ -36,18 +36,18 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Web for Publisher</h1>
+      <h1 class="text-center">「澎湖民藝復興計畫」盤點網</h1>
     </div>
   </div>
   <hr>
 </div>
 <div class="container col-md-6">
   <div class="row">
-    <h3>Upload file</h3>
+    <h3>上傳檔案</h3>
 	  <div class="input-group mb-3">
 	    <div class="custom-file">
 		  <input type="file" class="custom-file-input" id="inputGroupFile01">
-		  <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+		  <label class="custom-file-label" for="inputGroupFile01">選擇檔案</label>
 	    </div>
 	  </div> 
   </div>
