--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bootstrap - Prebuilt Layout</title>
+<title>Publisher</title>
 
-<!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 
@@ -20,24 +19,24 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="upload.html">Upload</a>
+        <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="inventory.html">Inventory</a>
+        <a class="nav-link" href="inventory.html">檔案列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="unit.html">Unit</a>
+        <a class="nav-link" href="unit.html">單位列表</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Login</a>
+        <a class="nav-link" href="login.html">登入</a>
       </li>
     </ul>
   </div>
 </nav>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-12 col-md-offset-3">
-      <h1 class="text-center">Web for Publisher</h1>
+    <div class="col-md-6 col-md-offset-3">
+      <h1 class="text-center">「澎湖民藝復興計畫」盤點網</h1>
     </div>
   </div>
   <hr>
