--- a/inventory.html
+++ b/inventory.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">Navbar</a>
+  <a class="navbar-brand" href="index.html">首頁</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -64,7 +64,7 @@
 		  <tbody>
 			<tr>
 			  <th scope="row">1</th>
-			  <td>地方署</td>
+			  <td>單位A</td>
 			  <td>PDF</td>
 			  <td>File path</td>
 			  <td>introduce.pdf</td>
@@ -73,11 +73,11 @@
 			  <td>是</td>
 			  <td>0</td>
 			  <td>食,住</td>
-			  <td>好玩,好吃,房間很舒適</td>
+			  <td>#抱礅#海#石滬</td>
 			</tr>
 			<tr>
 			  <th scope="row">2</th>
-			  <td>地方署</td>
+			  <td>單位A</td>
 			  <td>PDF</td>
 			  <td>File path</td>
 			  <td>introduce.pdf</td>
@@ -86,11 +86,11 @@
 			  <td>是</td>
 			  <td>0</td>
 			  <td>食,住</td>
-			  <td>好玩,好吃,房間很舒適</td>
+			  <td>#花火節#夜釣小管</td>
 			</tr>
 			<tr>
 			  <th scope="row">3</th>
-			  <td>地方署</td>
+			  <td>單位A</td>
 			  <td>PDF</td>
 			  <td>File path</td>
 			  <td>introduce.pdf</td>
@@ -99,7 +99,7 @@
 			  <td>是</td>
 			  <td>0</td>
 			  <td>食,住</td>
-			  <td>好玩,好吃,房間很舒適</td>
+			  <td>#北環#跨海大橋#風車</td>
 			</tr>
 		  </tbody>
 		</table>
