--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">Navbar</a>
+  <a class="navbar-brand" href="index.html">首頁</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -44,7 +44,7 @@
 <div class="container">
   <div class="row text-center">
     <div class="col-md-12 col-md-offset-3">
-		<h3>地方署</h3>
+		<h3>單位A</h3>
 	</div>
   </div>
   <hr>
@@ -59,9 +59,9 @@
 		<h5>基本資料</h5>
 		<div class="text-justify">
 			<p><strong>設立年代</strong>&nbsp;1995</p>
-			<p><strong>電話</strong>&nbsp;069-12345678</p>
+			<p><strong>電話</strong>&nbsp;06-9876630</p>
 			<p><strong>地址</strong>&nbsp;澎湖縣馬公市XX路XXX號</p>
-			<p><strong>網址</strong>&nbsp;<a href="http://google.com">link</a></p>
+			<p><strong>網址</strong>&nbsp;<a href="http://google.com">www.xxx.gov.tw</a></p>
 		</div>
 	</div>
   </div>
