--- a/upload.html
+++ b/upload.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">Navbar</a>
+  <a class="navbar-brand" href="index.html">首頁</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -71,13 +71,13 @@
 				  <span class="checkradio"></span>
 				</label>
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">原文位址</label>
+					<label class="col-sm-4 col-form-label">檔案位址</label>
 					<div class="col-sm-8">
 					  <input type="text" class="form-control" id="otherURL" placeholder="http://" disabled>
 					</div>
-					<label class="col-sm-4 col-form-label">檔名</label>
+					<label class="col-sm-4 col-form-label">描述</label>
 					<div class="col-sm-8">
-					  <input type="text" class="form-control" id="otherFileName" placeholder="檔案名稱" disabled>
+					  <input type="text" class="form-control" id="otherFileName" placeholder="功能、內容描述" disabled>
 					</div>
 			  	</div>
 			</div>
@@ -89,17 +89,17 @@
     <div class="col-sm-12 text-center">
       <h5>檔案基本資料</h5>
       <div class="form-group row">
-		<label class="col-sm-4 col-form-label">檔案名稱</label>
+		<label class="col-sm-4 col-form-label">出版品名稱</label>
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="" placeholder="">
 			</div>
 			<label class="col-sm-4 col-form-label">作者</label>
 			<div class="col-sm-8">
-				<input type="text" class="form-control" id="" placeholder="檔案名稱">
+				<input type="text" class="form-control" id="">
 			</div>
 			<label class="col-sm-4 col-form-label">出版日期</label>
 			<div class="col-sm-8">
-				<input type="date" class="form-control" id="" placeholder="檔案名稱">
+				<input type="date" class="form-control" id="">
 			</div>
 	  </div>
     </div>
