--- a/login.html
+++ b/login.html
@@ -43,17 +43,17 @@
 </div>
 <div class="container">
   <div>
-	  <h3>Login</h3>
+	  <h3>登入</h3>
 	 <form>
 	  <div class="form-group">
-		<label for="exampleInputEmail1">Email address</label>
-		<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+		<label for="exampleInputEmail1">帳號</label>
+		<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="請輸入帳號">
 	  </div>
 	  <div class="form-group">
-		<label for="exampleInputPassword1">Password</label>
-		<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+		<label for="exampleInputPassword1">密碼</label>
+		<input type="password" class="form-control" id="exampleInputPassword1" placeholder="請輸入密碼">
 	  </div>
-	  <input type="button" class="btn btn-primary" value="Submit">
+	  <input type="button" class="btn btn-primary" value="送出">
 	</form>
 
   </div>
