--- a/upload.html
+++ b/upload.html
@@ -56,7 +56,7 @@
 	  <h4>出版品</h4>
 	  <div class="row col-md-12">
 		  <div class="text-center form-control">
-		  <h5>檔案格式</h5>
+		  <h5>出版品型態</h5>
 		    <label class="checkarea">全文電子檔
 			<input type="radio" checked="checked" name="RadioForFile" id="content">
 			<span class="checkradio"></span>
@@ -87,7 +87,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12 text-center">
-      <h5>檔案基本資料</h5>
+      <h5>出版品基本資料</h5>
       <div class="form-group row">
 		<label class="col-sm-4 col-form-label">出版品名稱</label>
 			<div class="col-sm-8">
