--- a/upload.html
+++ b/upload.html
@@ -88,7 +88,7 @@
   <div class="row">
     <div class="col-sm-12 text-center">
       <h5>出版品基本資料</h5>
-      <div class="text-center form-control"><!--class="form-group row"-->
+      <div class="form-group row"><!--class="text-center form-control"-->
 		<label class="col-sm-4 col-form-label">出版品名稱</label>
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="" placeholder="">
