--- a/upload.html
+++ b/upload.html
@@ -52,9 +52,9 @@
 	  </div> 
   </div>
   <div class="row">
-    <div class="col-sm-12 text-center">
+    <div class="text-center col-md-12"><!--col-sm-12 text-center-->
       <h5>出版品基本資料</h5>
-      <div class="form-group row"><!--class="text-center form-control"-->
+      <div class="row col-md-12"><!--class="text-center form-control"form-group row-->
 		<label class="col-sm-4 col-form-label">出版品名稱</label>
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="" placeholder="">
@@ -72,7 +72,6 @@
   </div>
   <div class="row">
     <div class="text-center col-md-12">
-	  <h4>出版品</h4>
 	  <div class="row col-md-12">
 		  <div class="text-center form-control">
 		  <h5>出版品型態</h5>
