--- a/upload.html
+++ b/upload.html
@@ -52,9 +52,9 @@
 	  </div> 
   </div>
   <div class="row">
-    <div class="text-center col-md-12"><!--col-sm-12 text-center-->
+    <div class="text-center form-control"><!--col-sm-12 text-center-->
       <h5>出版品基本資料</h5>
-      <div class="row col-md-12"><!--class="text-center form-control"form-group row-->
+      <div class="text-center form-control"><!--class="text-center form-control"form-group row-->
 		<label class="col-sm-4 col-form-label">出版品名稱</label>
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="" placeholder="">
@@ -70,6 +70,7 @@
 	  </div>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="text-center col-md-12">
 	  <div class="row col-md-12">
@@ -103,6 +104,7 @@
 	  </div>
 	</div>
   </div>
+  <br>
   <div class="row">
     <div class="text-center col-md-12">
 	  <div class="row col-md-12">
