--- a/upload.html
+++ b/upload.html
@@ -54,7 +54,8 @@
   <div class="row">
     <div class="text-center form-control"><!--col-sm-12 text-center-->
       <h5>出版品基本資料</h5>
-      <div class="text-center form-control"><!--class="text-center form-control"form-group row-->
+      <div class="form-group row"><!--class="text-center form-control"form-group row-->
+	      <div class="form-group row">
 		<label class="col-sm-4 col-form-label">出版品名稱</label>
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="" placeholder="">
@@ -67,6 +68,7 @@
 			<div class="col-sm-8">
 				<input type="date" class="form-control" id="">
 			</div>
+	      </div>
 	  </div>
     </div>
   </div>
