--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div>
 			<p>您目前已上傳<h4>5</h4>個檔案</p>
 		</div>
-		<button class="btn btn-info">上傳檔案</button>
+		<button class="btn btn-info" href="upload.html" >上傳檔案</button>
 	</div>
     <div class="col-sm-6 text-center"> 
 		<h5>基本資料</h5>
