--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div>
 			<p>您目前已上傳<h4>5</h4>個檔案</p>
 		</div>
-	  <button class="btn btn-info"><a href="upload.html">上傳檔案</a></button>
+	  <button class="btn btn-info" onclick="location.href='upload.html'">上傳檔案</button>
 	</div>
     <div class="col-sm-6 text-center"> 
 		<h5>基本資料</h5>
