--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
       <li class="nav-item">
