--- a/upload.html
+++ b/upload.html
@@ -174,7 +174,7 @@
       <div class="form-group row">
 		<label class="col-sm-12 col-form-label">為您的作品定義一些標籤</label>
 		<div class="col-sm-12">
-			<textarea class="form-control"></textarea>
+			<textarea class="form-control" placeholder="#石滬#澎湖"></textarea>
 		</div>
 	  </div>
     </div>
