--- a/upload.html
+++ b/upload.html
@@ -42,17 +42,53 @@
   <hr>
 </div>
 <div class="container col-md-6">
+  <br>
   <div class="row">
-    <h3>上傳檔案</h3>
-	  <div class="input-group mb-3">
-	    <div class="custom-file">
-		  <input type="file" class="custom-file-input" id="inputGroupFile01">
-		  <label class="custom-file-label" for="inputGroupFile01">選擇檔案</label>
-	    </div>
-	  </div> 
+    <div class="text-center col-md-12">
+	  <div class="row col-md-12">
+		  <div class="text-center form-control">
+		  <h5>出版品型態</h5>
+		  <div class="form-group row">
+			  <label class="col-sm-4 col-form-label">描述</label>
+			  <div class="col-sm-8">
+				 <input type="text" class="form-control" id="" placeholder="功能、內容描述">
+			  </div>
+		  </div>
+		    <label class="checkarea">全文電子檔
+			<input type="radio" checked="checked" name="RadioForFile" id="content">
+			<span class="checkradio"></span>
+				<div class="custom-file" id="inputContent">
+				  <input type="file" class="custom-file-input" id="inputContentFile">
+				  <label class="custom-file-label" for="inputContentFile">選擇檔案</label>
+				</div>
+			</label>
+			<label class="checkarea">附錄電子檔
+			  <input type="radio" name="RadioForFile" id="appendix">
+			  <span class="checkradio"></span>
+			  	<div class="custom-file hiddenArea" id="inputAppendix">
+				  <input type="file" class="custom-file-input" id="inputAppendixFile">
+				  <label class="custom-file-label" for="inputAppendixFile">選擇檔案</label>
+				</div>
+			</label>
+			  
+			<div class="text-center">
+				<label class="checkarea">其他
+				  <input type="radio" name="RadioForFile" id="other">
+				  <span class="checkradio"></span>
+				</label>
+				<div class="form-group row col-md-12 text-center">
+					<!-- <label class="col-sm-4 col-form-label">檔案位址</label> -->
+					<div class="col-sm-12 fineTuneInput hiddenArea" id="inputOther">
+					  <input type="text" class="form-control" id="" placeholder="檔案位址，如：http://">
+					</div>
+				</div>
+			</div>
+		  </div>
+	  </div>
+	</div>
   </div>
   <div class="row">
-    <div class="text-center form-control"><!--col-sm-12 text-center-->
+    <div class="text-center form-control col-md-12"><!--col-sm-12 text-center-->
       <h5>出版品基本資料</h5>
       <div class="form-group row"><!--class="text-center form-control"form-group row-->
 		<label class="col-sm-4 col-form-label">出版品名稱</label>
@@ -69,40 +105,6 @@
 			</div>
 	  </div>
     </div>
-  </div>
-  <br>
-  <div class="row">
-    <div class="text-center col-md-12">
-	  <div class="row col-md-12">
-		  <div class="text-center form-control">
-		  <h5>出版品型態</h5>
-		    <label class="checkarea">全文電子檔
-			<input type="radio" checked="checked" name="RadioForFile" id="content">
-			<span class="checkradio"></span>
-			</label>
-			<label class="checkarea">附錄電子檔
-			  <input type="radio" name="RadioForFile" id="appendix">
-			  <span class="checkradio"></span>
-			</label>
-			<div>
-				<label class="checkarea">其他
-				  <input type="radio" name="RadioForFile" id="other">
-				  <span class="checkradio"></span>
-				</label>
-				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">檔案位址</label>
-					<div class="col-sm-8">
-					  <input type="text" class="form-control" id="otherURL" placeholder="http://" disabled>
-					</div>
-					<label class="col-sm-4 col-form-label">描述</label>
-					<div class="col-sm-8">
-					  <input type="text" class="form-control" id="otherFileName" placeholder="功能、內容描述" disabled>
-					</div>
-			  	</div>
-			</div>
-		  </div>
-	  </div>
-	</div>
   </div>
   <br>
   <div class="row">
