According to Ming Han write up to modity.

--- a/index.html
+++ b/index.html
@@ -41,28 +41,30 @@
   </div>
   <hr>
 </div>
-<div class="container">
+<div class="container col-md-6">
   <div class="row text-center">
     <div class="col-md-12 col-md-offset-3">
 		<h3>單位A</h3>
 	</div>
   </div>
   <hr>
-  <div class="row">
-    <div class="text-center col-sm-6"> 
-		<div>
-			<p>您目前已上傳<h4>5</h4>個檔案</p>
-		</div>
-	  <button class="btn btn-info" onclick="location.href='upload.html'">上傳檔案</button>
-	</div>
+  <div class="row col-md-12">
     <div class="col-sm-6 text-center"> 
 		<h5>基本資料</h5>
 		<div class="text-justify">
 			<p><strong>設立年代</strong>&nbsp;1995</p>
+			<p><strong>聯絡人</strong>&nbsp;王大明</p>
 			<p><strong>電話</strong>&nbsp;06-9876630</p>
 			<p><strong>地址</strong>&nbsp;澎湖縣馬公市XX路XXX號</p>
 			<p><strong>網址</strong>&nbsp;<a href="http://google.com">www.xxx.gov.tw</a></p>
 		</div>
+	</div>
+	<div class="text-center col-sm-6"> 
+		<div>
+			<p>您有<h4>5</h4>個文化檔案</p>
+		</div>
+	  <button class="btn btn-info" onclick="location.href='inventory.html'">檔案列表</button>
+	  <button class="btn btn-info" onclick="location.href='upload.html'">新增資料</button>
 	</div>
   </div>
   <hr>
