--- a/upload.html
+++ b/upload.html
@@ -70,6 +70,10 @@
 				  <label class="custom-file-label" for="inputAppendixFile">選擇檔案</label>
 				</div>
 			</label>
+			<label class="checkarea">紙本
+			  <input type="radio" name="RadioForFile" id="paper">
+			  <span class="checkradio"></span>
+			</label>
 			  
 			<div class="text-center">
 				<label class="checkarea">其他
@@ -88,20 +92,20 @@
 	</div>
   </div>
   <div class="row">
-    <div class="text-center form-control col-md-12"><!--col-sm-12 text-center-->
+    <div class="text-center col-md-11" id="publicationDetail"><!--col-sm-12 text-center-->
       <h5>出版品基本資料</h5>
       <div class="form-group row"><!--class="text-center form-control"form-group row-->
-		<label class="col-sm-4 col-form-label">出版品名稱</label>
+		<label class="col-sm-4 col-form-label">出版品名</label>
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="" placeholder="">
 			</div>
-			<label class="col-sm-4 col-form-label">作者</label>
+			<label class="col-sm-4 col-form-label">作者/編者</label>
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="">
 			</div>
-			<label class="col-sm-4 col-form-label">出版日期</label>
+			<label class="col-sm-4 col-form-label">出版年</label>
 			<div class="col-sm-8">
-				<input type="date" class="form-control" id="">
+				<input type="number" class="form-control" id="">
 			</div>
 	  </div>
     </div>
