--- a/unit.html
+++ b/unit.html
@@ -54,8 +54,8 @@
 			  <th scope="col">設立年代</th>
 			  <th scope="col">聯絡人</th>
 			  <th scope="col">電話</th>
-			  <th scope="col">文件數</th>
-			  <th scope="col">上傳檔案</th>
+			  <th scope="col">所有文件數</th>
+			  <th scope="col">已上傳數量</th>
 			  <th scope="col">最近更新時間</th>
 			</tr>
 		  </thead>
@@ -68,7 +68,7 @@
 			  <td>王大明</td>
 			  <td>06-9876630</td>
 			  <td>2</td>
-			  <td>File name</td>
+			  <td>2</td>
 			  <td>2018/05/03 17:50</td>
 			</tr>
 			<tr>
@@ -79,7 +79,7 @@
 			  <td>王大明</td>
 			  <td>06-9876653</td>
 			  <td>5</td>
-			  <td>File name</td>
+			  <td>4</td>
 			  <td>2018/05/03 17:50</td>
 			</tr>
 			<tr>
@@ -90,7 +90,7 @@
 			  <td>王大明</td>
 			  <td>06-5468893</td>
 			  <td>1</td>
-			  <td>File name</td>
+			  <td>0</td>
 			  <td>2018/05/03 17:50</td>
 			</tr>
 		  </tbody>
