--- a/inventory.html
+++ b/inventory.html
@@ -63,10 +63,8 @@
 	</div>
 	<div class="text-center col-sm-6"> 
 		<div>
-			<p>您有<h4>5</h4>個文化檔案</p>
+			<p>此單位有<h4>5</h4>個文化檔案</p>
 		</div>
-	  <button class="btn btn-info" onclick="location.href='inventory.html'">檔案列表</button>
-	  <button class="btn btn-info" onclick="location.href='upload.html'">新增資料</button>
 	</div>
   </div>
 </div>
