--- a/unit.html
+++ b/unit.html
@@ -52,7 +52,7 @@
 			  <th scope="col">分類</th>
 			  <th scope="col">單位名稱</th>
 			  <th scope="col">設立年代</th>
-			  <th scope="col">聯絡人</th>
+			  <th scope="col">負責人</th>
 			  <th scope="col">電話</th>
 			  <th scope="col">所有文件數</th>
 			  <th scope="col">已上傳數量</th>
