--- a/upload.html
+++ b/upload.html
@@ -7,6 +7,7 @@
 <title>Publisher</title>
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap-datepicker.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -74,7 +75,18 @@
 			  <input type="radio" name="RadioForFile" id="paper">
 			  <span class="checkradio"></span>
 			</label>
-			  
+			<div class="text-center">
+				<label class="checkarea">電子書
+				  <input type="radio" name="RadioForFile" id="Ebook">
+				  <span class="checkradio"></span>
+				</label>
+				<div class="form-group row col-md-12 text-center">
+					<!-- <label class="col-sm-4 col-form-label">檔案位址</label> -->
+					<div class="col-sm-12 fineTuneInput hiddenArea" id="inputEbookURL">
+					  <input type="text" class="form-control" id="" placeholder="檔案位址，如：http://">
+					</div>
+				</div>
+			</div>			  
 			<div class="text-center">
 				<label class="checkarea">其他
 				  <input type="radio" name="RadioForFile" id="other">
@@ -95,7 +107,7 @@
     <div class="text-center col-md-11" id="publicationDetail"><!--col-sm-12 text-center-->
       <h5>出版品基本資料</h5>
       <div class="form-group row"><!--class="text-center form-control"form-group row-->
-		<label class="col-sm-4 col-form-label">出版品名</label>
+		<label class="col-sm-4 col-form-label">書籍名稱</label>
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="" placeholder="">
 			</div>
@@ -103,10 +115,10 @@
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="">
 			</div>
-			<label class="col-sm-4 col-form-label">出版年</label>
+			<label class="col-sm-4 col-form-label">出版年月</label>
 			<div class="col-sm-8">
-				<input type="number" class="form-control" id="">
-			</div>
+				<input type="text" class="form-control" id="datepicker">
+			</div> 
 	  </div>
     </div>
   </div>
@@ -205,6 +217,7 @@
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
+<script src="js/bootstrap-datepicker.min.js"></script>
 <script src="js/frontEnd.js"></script>
 </body>
 </html>
