--- a/upload.html
+++ b/upload.html
@@ -86,7 +86,19 @@
 					  <input type="text" class="form-control" id="" placeholder="檔案位址，如：http://">
 					</div>
 				</div>
-			</div>			  
+			</div>	
+			<div class="text-center">
+				<label class="checkarea">影音光碟
+				  <input type="radio" name="RadioForFile" id="disk">
+				  <span class="checkradio"></span>
+				</label>
+				<div class="form-group row col-md-12 text-center">
+					<!-- <label class="col-sm-4 col-form-label">檔案位址</label> -->
+					<div class="col-sm-12 fineTuneInput hiddenArea" id="inputDiskURL">
+					  <input type="text" class="form-control" id="" placeholder="檔案位址，如：http://">
+					</div>
+				</div>
+			</div>
 			<div class="text-center">
 				<label class="checkarea">其他
 				  <input type="radio" name="RadioForFile" id="other">
@@ -119,6 +131,14 @@
 			<div class="col-sm-8">
 				<input type="text" class="form-control" id="datepicker">
 			</div> 
+		    <label class="col-sm-4 col-form-label">出版地</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" id="">
+			</div>
+		    <label class="col-sm-4 col-form-label">ISBN</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" id="">
+			</div>
 	  </div>
     </div>
   </div>
